[package]
name = "cargo_and_crates"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "This is tutorial crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
